# llvm-project

clang/lib/Basic/Targets/: X86.h
clang/lib/CodeGen/: CodeGenModule.cpp
clang/lib/Driver/ToolChains/: Gnu.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
llvm/include/llvm/ADT/: Triple.h
llvm/include/llvm/Frontend/OpenMP/: OMPGridValues.h  OMPKinds.def
llvm/lib/Support/: Triple.cpp
llvm/lib/Transforms/IPO/: OpenMPOpt.cpp
llvm/utils/: collect_and_build_with_pgo.py
openmp/: CMakeLists.txt
openmp/libomptarget/DeviceRTL/: CMakeLists.txt
openmp/libomptarget/DeviceRTL/include/: Interface.h
openmp/libomptarget/DeviceRTL/src/: Kernel.cpp  Mapping.cpp  Misc.cpp  Synchronization.cpp  Utils.cpp
openmp/libomptarget/include/: rtl.h
openmp/libomptarget/plugins/: CMakeLists.txt
openmp/libomptarget/plugins/cuda/src/: rtl.cpp
openmp/libomptarget/plugins/remote/: CMakeLists.txt
openmp/libomptarget/plugins/remote/include/: BaseUtils.h  grpc.proto  messages.proto  openmp.grpc.pb.h  openmp.pb.h  ucx.proto
openmp/libomptarget/plugins/remote/serialization/protobuf/: ucx.proto
openmp/libomptarget/plugins/remote/server/: CMakeLists.txt  OffloadingServer.cpp  Server.cpp
openmp/libomptarget/plugins/remote/src/: BaseClient.cpp  BaseClient.h  CMakeLists.txt  Client.h  Utils.cpp  openmp.grpc.pb.cc  openmp.pb.cc  rtl.cpp
openmp/libomptarget/plugins/remote/transports/grpc/: Client.cpp  Client.h  Server.cpp  Server.h  Utils.cpp  Utils.h  grpc.proto
openmp/libomptarget/plugins/remote/transports/ucx/: Base.cpp  Base.h  Client.cpp  Client.h  Serialization.cpp  Serialization.h  Serializer.cpp  Serializer.h  Server.cpp  Server.h  Utils.cpp  Utils.h  dump  ucx.proto
openmp/libomptarget/plugins/vgpu/: CMakeLists.txt
openmp/libomptarget/plugins/vgpu/src/: DeviceEnvironmentImpl.h  ThreadEnvironment.cpp  ThreadEnvironment.h  rtl.cpp
openmp/libomptarget/src/: rtl.cpp  rtl.h
